feat: is modifying transportation walk variants

--- a/src/components/lyne-timetable-transportation-walk/styles/lyne-timetable-transportation-walk.component.scss
+++ b/src/components/lyne-timetable-transportation-walk/styles/lyne-timetable-transportation-walk.component.scss
@@ -29,6 +29,10 @@
   margin-inline-end: pxToRem(var(--spacing-fixed-1x));
 }
 
+.walk--second-level .walk__icon {
+  margin-inline-end: pxToRem(var(--spacing-fixed-3x));
+}
+
 .walk__icon svg {
   float: left;
   height: pxToRem(var(--walk-icon-height));
