feat: is adding fixes for forced colors mode

--- a/src/components/lyne-autocomplete-item/styles/lyne-autocomplete-item.component.scss
+++ b/src/components/lyne-autocomplete-item/styles/lyne-autocomplete-item.component.scss
@@ -39,6 +39,11 @@
     background-color: Highlight;
     color: HighlightText;
   }
+
+  span {
+    background-color: Highlight;
+  }
+
 }
 
 .autocomplete-item > span {
