--- a/src/components/lyne-autocomplete-list/styles/lyne-autocomplete-list.component.scss
+++ b/src/components/lyne-autocomplete-list/styles/lyne-autocomplete-list.component.scss
@@ -37,7 +37,10 @@
 
   @include ifForcedColors() {
     background-color: Canvas;
+    border: pxToRem(1) solid Highlight;
+    border-block-start: none;
   }
+
 }
 
 .autocomplete-list__list--visible {
