--- a/src/global/mixins/mixins_card.scss
+++ b/src/global/mixins/mixins_card.scss
@@ -12,6 +12,8 @@
 }
 
 @mixin card {
+  display: block;
+
   padding-block-start: var(--card-padding-top);
   padding-inline-end: var(--card-padding-right);
   padding-block-end: var(--card-padding-bottom);
@@ -28,6 +30,8 @@
 
     padding-top: calc(var(--card-padding-top) - var(--card-hover-shift));
     padding-bottom: calc(var(--card-padding-bottom) + var(--card-hover-shift));
+
+    cursor: pointer;
   }
 }
 
