feat: is adding transportation number variants

--- a/src/components/lyne-timetable-occupancy/styles/lyne-timetable-occupancy.component.scss
+++ b/src/components/lyne-timetable-occupancy/styles/lyne-timetable-occupancy.component.scss
@@ -40,4 +40,5 @@
   float: left;
   height: pxToRem(var(--occupancy-icon-height));
   width: pxToRem(var(--occupancy-icon-width));
+  fill: currentColor;
 }
