feat: removing ellipsis behaviour for 2nd level number__direction_text

--- a/src/components/lyne-timetable-transportation-number/styles/lyne-timetable-transportation-number.component.scss
+++ b/src/components/lyne-timetable-transportation-number/styles/lyne-timetable-transportation-number.component.scss
@@ -91,6 +91,9 @@
 
 .transportation-number__direction_text {
   display: block;
+}
+
+.transportation-number--first-level .transportation-number__direction_text {
   @include ellipsis();
 }
 
