--- a/src/components/lyne-product-ticket/styles/lyne-product-ticket.component.scss
+++ b/src/components/lyne-product-ticket/styles/lyne-product-ticket.component.scss
@@ -6,7 +6,7 @@
 :host {
   @include card-host-properties;
   --slot-icon-spacing-inline: var(--spacing-fixed-4x);
-  --slot-connection-details-spacing-top: var(--spacing-fixed-2x);
+  --slot-details-spacing-top: var(--spacing-fixed-2x);
   --slot-action-spacing-top: var(--spacing-fixed-4x);
 }
 
@@ -38,8 +38,8 @@
   align-items: center;
 }
 
-.product-ticket__connection-details {
-  padding-block-start: pxToRem(var(--slot-connection-details-spacing-top));
+.product-ticket__details {
+  padding-block-start: pxToRem(var(--slot-details-spacing-top));
 }
 
 .product-ticket__action {
