--- a/src/components/lyne-timetable-transportation-walk/styles/lyne-timetable-transportation-walk.component.scss
+++ b/src/components/lyne-timetable-transportation-walk/styles/lyne-timetable-transportation-walk.component.scss
@@ -38,4 +38,9 @@
   height: pxToRem(var(--walk-icon-height));
   width: pxToRem(var(--walk-icon-width));
   transform: translateX(pxToRem(-7));
+
+  @include ifForcedColors {
+    fill: CanvasText;
+  }
+
 }
