--- a/src/components/lyne-timetable-platform/styles/lyne-timetable-platform.component.scss
+++ b/src/components/lyne-timetable-platform/styles/lyne-timetable-platform.component.scss
@@ -4,6 +4,10 @@
   white-space: nowrap;
 }
 
+.platform--second-level-departure {
+  @include text-s--bold();
+}
+
 .platform__text--visually-hidden {
   @include screenReaderOnly();
 }
