--- a/src/components/lyne-timetable-park-and-rail/styles/lyne-timetable-park-and-rail.component.scss
+++ b/src/components/lyne-timetable-park-and-rail/styles/lyne-timetable-park-and-rail.component.scss
@@ -11,7 +11,7 @@
 }
 
 .park-and-rail__icon svg {
-  float: left;
+  float: inline-start;
   height: pxToRem(var(--park-and-rail-icon-height));
   width: pxToRem(var(--park-and-rail-icon-width));
 
