--- a/src/components/lyne-timetable-cus-him/styles/lyne-timetable-cus-him.component.scss
+++ b/src/components/lyne-timetable-cus-him/styles/lyne-timetable-cus-him.component.scss
@@ -1,5 +1,5 @@
 :host {
-  --cus-him-icon-height: 16;
+  --cus-him-icon-height: 16; // TODO: Missing Design Token
 }
 
 .cus-him {
@@ -13,7 +13,7 @@
 
 // First Level List appearance
 // ----------------------------------------------
-.cus-him__first-level-list {
+.cus-him--first-level-list {
   --list-item-justification: flex-end;
 }
 
@@ -100,7 +100,7 @@
 }
 
 .cus-him__icon svg {
-  float: left;
+  float: inline-start;
 }
 
 .cus-him__text--visually-hidden {
