--- a/src/components/lyne-timetable-row/styles/lyne-timetable-row.component.scss
+++ b/src/components/lyne-timetable-row/styles/lyne-timetable-row.component.scss
@@ -9,8 +9,12 @@
   --row-min-height: 108;
   --third-row-min-height: 27;
 
+  --flex-basis-pillar-columns: 50; // left and right of pearl chain
+  --flex-basis-pillar-columns-walking-icon: 85; // if an icon is present, we have to increase the basis
+
   @include mq($from: medium) {
     --row-min-height: 114;
+    --flex-basis-pillar-columns: 55;
   }
 
 }
@@ -26,10 +30,17 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: flex-start;
-  // min-height: pxToRem(var(--row-min-height));
 }
 
-.timetable__row > * {
+.timetable__row > lyne-timetable-row-header,
+.timetable__row > lyne-timetable-transportation-details,
+.timetable__row > lyne-timetable-row-button,
+.timetable__row > lyne-timetable-platform,
+.timetable__row > lyne-timetable-occupancy,
+.timetable__row > lyne-timetable-travel-hints,
+.timetable__row > lyne-timetable-park-and-rail,
+.timetable__row > lyne-timetable-duration,
+.timetable__row > lyne-timetable-cus-him {
   display: flex;
   flex: 0 1 auto;
   position: relative;
@@ -38,7 +49,7 @@
 }
 
 .timetable__row svg {
-  float: left;
+  float: inline-start;
 }
 
 .timetable__row > lyne-timetable-row-header {
@@ -70,19 +81,15 @@
 
 .timetable__row > lyne-timetable-cus-him {
   justify-self: end;
-  flex-basis: pxToRem(50);
+  flex-basis: pxToRem(var(--flex-basis-pillar-columns));
 
   @include mq($to: small) {
     @include screenReaderOnly();
   }
-
-  @include mq($from: medium) {
-    flex-basis: pxToRem(55);
-  }
 }
 
 .timetable__row--arrival-walk > lyne-timetable-cus-him {
-  flex-basis: pxToRem(85);
+  flex-basis: pxToRem(var(--flex-basis-pillar-columns-walking-icon));
 
   @include mq($from: medium) {
     flex-basis: pxToRem(91);
@@ -103,16 +110,11 @@
 .timetable__row > lyne-timetable-platform {
   align-items: center;
   min-height: pxToRem(var(--third-row-min-height));
-  flex-basis: pxToRem(50);
-
-  @include mq($from: medium) {
-    flex-basis: pxToRem(55);
-  }
-
+  flex-basis: pxToRem(var(--flex-basis-pillar-columns));
 }
 
 .timetable__row.timetable__row--departure-walk > lyne-timetable-platform {
-  flex-basis: pxToRem(85);
+  flex-basis: pxToRem(var(--flex-basis-pillar-columns-walking-icon));
 
   @include mq($from: medium) {
     flex-basis: pxToRem(92);
