feat: adding modifications for timetable button and hcm

--- a/src/global/mixins/mixins_card.scss
+++ b/src/global/mixins/mixins_card.scss
@@ -44,6 +44,16 @@
       cursor: pointer;
     }
   }
+
+  @include ifForcedColors {
+    border: pxToRem(1) solid ButtonText;
+
+    &:disabled {
+      border-color: GrayText;
+    }
+
+  }
+
 }
 
 // Card appearance
