fix: use correct mixin

--- a/src/components/lyne-text-input/styles/lyne-text-input.component.scss
+++ b/src/components/lyne-text-input/styles/lyne-text-input.component.scss
@@ -68,7 +68,7 @@
 
 .input--no-border {
   border: none;
-  @include shadowElevationLevel5;
+  @include shadow-level-5-hard;
 
   @include ifForcedColors() {
     border: pxToRem(1) solid CanvasText;
