--- a/src/components/lyne-autocomplete-list/styles/lyne-autocomplete-list.component.scss
+++ b/src/components/lyne-autocomplete-list/styles/lyne-autocomplete-list.component.scss
@@ -9,6 +9,7 @@
 
 .autocomplete-list__list {
   @include listReset;
+  @include shadow-level-5-hard;
 
   cursor: default;
   position: absolute;
@@ -25,11 +26,6 @@
   padding-block-end: pxToRem(var(--spacing-fixed-3x));
   padding-inline-start: pxToRem(var(--spacing-responsive-xxxs-zero));
   padding-inline-end: pxToRem(var(--spacing-responsive-xxxs-zero));
-
-  box-shadow:
-  pxToRem(var(--shadow-elevation-level-5-shadow-1-offset-x)) pxToRem(var(--shadow-elevation-level-5-shadow-1-offset-y)) pxToRem(var(--shadow-elevation-level-5-shadow-1-blur)) pxToRem(var(--shadow-elevation-level-5-shadow-1-spread)) var(--shadow-elevation-level-5-soft-1-color),
-  pxToRem(var(--shadow-elevation-level-5-shadow-2-offset-x)) pxToRem(var(--shadow-elevation-level-5-shadow-2-offset-y)) pxToRem(var(--shadow-elevation-level-5-shadow-2-blur)) pxToRem(var(--shadow-elevation-level-5-shadow-2-spread)) var(--shadow-elevation-level-5-soft-2-color);
-  background-color: var(--color-white-default);
 
   @include mq($from: medium) {
     padding-inline-start: pxToRem(var(--spacing-responsive-xxxs-medium));
