--- a/src/components/lyne-autocomplete/styles/lyne-autocomplete.component.scss
+++ b/src/components/lyne-autocomplete/styles/lyne-autocomplete.component.scss
@@ -36,6 +36,7 @@
   right: 0;
   left: 0;
   z-index: -1;
+  background-color: var(--color-white-default);
 
   border-radius: pxToRem(var(--border-radius-4x));
   padding-block-start: calc(#{pxToRem(var(--input-height))} + #{pxToRem(var(--spacing-fixed-3x))});
