feat: horizontal direction for link-list

--- a/src/components/lyne-link-list/styles/lyne-link-list.component.scss
+++ b/src/components/lyne-link-list/styles/lyne-link-list.component.scss
@@ -15,6 +15,14 @@ lyne-title {
   @include listReset();
 }
 
+.link-list--horizontal {
+  @include mq($from: large) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: pxToRem(var(--spacing-fixed-8x));
+  }
+}
+
 ::slotted(.link-list__item:not(:last-child)) {
   margin-block-end: pxToRem(var(--spacing-fixed-3x));
 }
